# imedtac-ai-triage-kiosk-v0

./: .env.example  .gitignore  .vercelignore  AGENTS.md  API.md  CHANGELOG.md  Overview.md  README.md  Start_LLM_server.sh  Start_python_server.sh  package.json
Case_question/: Case.md  Case_Question_design.md  Case_tachycardia.md  Question_design.md  Symptom_question_needed.md  transform_md_csv.py
LLM_api/: .gitignore  README.md  main.py  pyproject.toml  summarizer.py
LLM_api/tests/: test_main.py
Question_DB/: Initial_questions.csv  Universal_questions.csv  symptom_questions.csv
data/: README.md  api_question_mapping.csv  flow_registry.csv  question_registry.csv  source_registry.csv  version_manifest.json
decisions/: 2026-05-20-june-demo-question-budget.md  2026-06-08-dynamic-engine-cloud-backend-boundary.md  2026-06-09-render-lab-gpu-inference-bridge.md  (+2 more)
python_api/: README.md  __init__.py  main.py  pyproject.toml  triage_contract.py
python_api/API_contract/: ai-triage-demo-api-contract-2026-06-11.md
python_api/PlanMD/: Plan.md  V1_frontend.md  V1_plan.md
python_api/static/: app.js  index.html  styles.css
python_api/static/demo-ui/shared/: styles.css
python_api/static/demo-ui/summary-review/: SummaryReview.tsx  fallback.html  index.html
python_api/tests/: test_contract.py  test_llm_summary_client.py  test_v1_engine.py
python_api/triage_v1/: __init__.py  constants.py  flow_router.py  llm_summary_client.py  models.py  question_registry.py  response_builder.py  session_store.py  summary_builder.py  vital_normalizer.py  vital_rules.py
(+221 files in other folders)
