[project]
name = "llm-api"
version = "0.1.0"
description = "Local Hugging Face subjective summary service for the AI triage kiosk demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30,<1",
    "einops>=0.8,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "protobuf>=4,<6",
    "python-dotenv>=1,<2",
    "pytest>=8,<9",
    "safetensors>=0.4,<1",
    "sentencepiece>=0.2,<1",
    "tiktoken>=0.7,<1",
    "torch>=2.2,<3",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "uvicorn[standard]>=0.30,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
