[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "uvicorn[standard]>=0.30,<1",
]

[tool.pytest.ini_options]
pythonpath = [".."]
